# ml4h

./: .gitignore  case_studies.py  config.py  data_pipeline.py  eval.py  main.py  neologism.py  pyproject.toml  report_generator.py  requirements.txt  semantic_drift.py  visualize.py  word_selection.py
outputs/: drift_candidates.csv  drift_results.csv  drift_results_full.pkl  evaluation_results.json  lifecycle_words.csv  neologism_candidates.csv  neologism_results.csv
outputs/case_studies/: INDEX.md  air.md  algernon.md  awfully.md  betrothed.md  bronze.md  cigarette.md  dark.md  dean.md  diary.md  dost.md  dragon.md  gwendolen.md  hands.md  intermediate.md  left.md  long.md  nun.md  rector.md  right.md  round.md  son.md  telegram.md  varieties.md
outputs/reports/: final_report.md
scripts/: results_for_report.py  sanity_inspect.py  verify_outputs.py
